--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     <main id="product" class="page">
         <header class="section-header">
-            <h2>Product Solutions</h2>
+            <h2 style="font-size: 42px;">Product Solutions</h2>
             <p>공용 냉장고 환경에 특화된 고성능 보안 제품</p>
         </header>
         <section class="product-grid">
